<resources>
    <string name="ap_camera_view_take_photo_button_text">Take Photo</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="ap_camera_view_circle_focus_button_description">autofocus</string>
    <string name="ap_camera_view_gallery_thumbnail_button_text">Gallery</string>
    <string name="ap_camera_text_close">Close</string>
    <string name="ap_camera_text_save">save</string>
    <string name="ap_editor_select_shape_menu_brush_text_label">Brush</string>
    <string name="ap_editor_select_shape_menu_shape_text_label">Shape</string>
    <string name="ap_editor_select_shape_menu_oval_text_label">Oval</string>
    <string name="ap_editor_select_shape_menu_rectangle_text_label">Rectangle</string>
    <string name="ap_editor_tool_label_line">Line</string>
    <string name="ap_editor_tool_label_emoji">Emoji</string>
    <string name="ap_editor_tool_label_sticker">Sticker</string>
    <string name="ap_editor_tool_label_eraser">Eraser</string>
    <string name="ap_editor_tool_label_eraser_mode">Eraser Mode</string>
    <string name="ap_editor_tool_label_text">Text</string>
    <string name="ap_editor_tool_label_filter">Filter</string>
    <string name="ap_editor_tool_label_adjust">Adjust</string>
    <string name="ap_editor_tool_save_image_label">Are you want to exit without saving image ?</string>
    <string name="ap_editor_color_picker_image_view_content_description">Just pick the color</string>
    <string name="ap_editor_select_shape_dialog_text_title_label">Shape</string>
    <string name="ap_editor_select_opacity_dialog_text_title_label">Opacity</string>
    <string name="ap_editor_select_brush_size_dialog_text_title_label">Brush size</string>
    <string name="ap_editor_add_text_dialog_done_button_text_label">Done</string>
    <string name="ap_editor_add_text_dialog_text_field_text_hint">Press to enter text</string>
    <string name="ap_editor_emoji_sticker_dialog_done_button_text_label">Done</string>
    <string name="ap_editor_emoji_sticker_dialog_close_button_text_label">Close</string>
    <string name="ap_editor_sticker_item_image_view_description">Just sticker pls</string>
    <string name="ap_editor_tools_undo_image_view_description">Just Undo</string>
    <string name="ap_editor_tools_redo_image_view_description">Just Redo</string>
    <string name="ap_editor_tools_close_image_view_description">Just Close</string>
    <string name="ap_editor_tools_save_image_view_description">Just Save</string>
    <string name="ap_editor_main_tools_description">Just tools</string>
    <string name="ap_editor_main_tools_shape_text_label">Shape</string>
    <string name="ap_editor_main_tools_add_text_label">Text</string>
    <string name="ap_editor_main_tools_eraser_text_label">Eraser</string>
    <string name="ap_editor_main_tools_emoji_text_label">Emoji</string>
    <string name="ap_editor_main_tools_sticker_text_label">Sticker</string>
    <string name="ap_editor_main_current_default_title_text_label">Photo Editor</string>
    <string name="ap_editor_menu_item_text_title">Edit</string>
</resources>