<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ap_camera_view_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:theme="@style/ThemeOverlay.GalahadCameraCore.FullscreenContainer"
    tools:context=".ApCameraActivity">

    <LinearLayout
        android:id="@+id/ap_camera_top_console_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="@dimen/ap_camera_view_item_padding">

        <ImageButton
            android:id="@+id/ap_camera_view_aspect_ratio_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/ap_camera_view_item_padding"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ap_camera_view_take_photo_button_text"
            android:src="@drawable/ic_ap_camera_toggle_aspect_ratio" />

        <ImageButton
            android:id="@+id/ap_camera_view_flash_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/ap_camera_view_item_padding"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ap_camera_view_take_photo_button_text"
            android:src="@drawable/ic_ap_camera_toggle_flash_off" />

        <ImageButton
            android:id="@+id/ap_camera_view_switch_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/ap_camera_view_item_padding"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ap_camera_view_take_photo_button_text"
            android:src="@drawable/ic_ap_camera_switch_camera" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/ap_camera_center_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ap_camera_bottom_console_view"
        android:layout_below="@id/ap_camera_top_console_view">

        <androidx.camera.view.PreviewView
            android:id="@+id/ap_camera_view_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/ap_camera_focus_circle_image_view"
            android:layout_width="@dimen/ap_camera_circle_auto_focus_button_size"
            android:layout_height="@dimen/ap_camera_circle_auto_focus_button_size"
            android:contentDescription="@string/ap_camera_view_circle_focus_button_description"
            android:src="@drawable/ic_ap_camera_focus_circle_view"
            android:visibility="invisible" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/ap_camera_bottom_console_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:background="@android:color/transparent">

        <ImageButton
            android:id="@+id/ap_camera_view_capture_button"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ap_camera_view_take_photo_button_text"
            android:src="@drawable/ic_ap_camera_view_capture_button" />

        <ImageView
            android:id="@+id/ap_camera_view_gallery_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/ap_camera_view_item_padding_huge"
            android:background="@drawable/background_ap_circle_view_transparent_with_white_border"
            android:contentDescription="@string/ap_camera_view_gallery_thumbnail_button_text"
            android:padding="@dimen/ap_camera_view_item_padding_small"
            android:src="@drawable/ic_ap_camera_toggle_gallery" />
    </FrameLayout>

</RelativeLayout>