<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ap_editor_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/ap_editor_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.GalahadCameraCore.Toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ja.burhanrashid52.photoeditor.PhotoEditorView
                android:id="@+id/ap_editor_photo_editor_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/ap_editor_photo_editor_container_btn_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:photo_src="@drawable/background_ap_rectangle_view_white" />

            <LinearLayout
                android:id="@+id/ap_editor_photo_editor_container_btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:paddingTop="@dimen/ap_camera_view_item_padding"
                android:paddingBottom="@dimen/ap_camera_view_item_padding"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/ap_editor_tool_undo_image_button_view"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        android:layout_width="@dimen/top_tool_icon_width"
                        android:layout_height="@dimen/top_tool_icon_width"
                        android:layout_marginEnd="@dimen/ap_camera_view_item_padding"
                        android:contentDescription="@string/ap_editor_tools_undo_image_view_description"
                        android:insetLeft="0dp"
                        android:insetTop="0dp"
                        android:insetRight="0dp"
                        android:insetBottom="0dp"
                        android:padding="0dp"
                        app:backgroundTint="@android:color/transparent"
                        app:cornerRadius="30dp"
                        app:icon="@drawable/ic_undo"
                        app:iconGravity="textStart"
                        app:iconPadding="0dp"
                        app:iconSize="38dp"
                        app:iconTint="@color/white"
                        app:rippleColor="#F3F3F3"
                        app:strokeColor="@color/white"
                        app:strokeWidth="1dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/ap_editor_tool_redo_image_button_view"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        android:layout_width="@dimen/top_tool_icon_width"
                        android:layout_height="@dimen/top_tool_icon_width"
                        android:layout_marginStart="@dimen/ap_camera_view_item_padding"
                        android:contentDescription="@string/ap_editor_tools_redo_image_view_description"
                        android:insetLeft="0dp"
                        android:insetTop="0dp"
                        android:insetRight="0dp"
                        android:insetBottom="0dp"
                        android:padding="0dp"
                        app:backgroundTint="@android:color/transparent"
                        app:cornerRadius="30dp"
                        app:icon="@drawable/ic_redo"
                        app:iconGravity="textStart"
                        app:iconPadding="0dp"
                        app:iconSize="38dp"
                        app:iconTint="@color/white"
                        app:rippleColor="#F3F3F3"
                        app:strokeColor="@color/white"
                        app:strokeWidth="1dp" />
                </LinearLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="end">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/ap_editor_save_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/ap_camera_view_item_padding_double"
                        android:layout_marginEnd="@dimen/ap_camera_view_item_padding_double"
                        android:fontFamily="@font/ap_galahad_camera_bold"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/ap_camera_view_item_padding_double"
                        android:paddingTop="@dimen/ap_camera_view_item_padding"
                        android:paddingEnd="@dimen/ap_camera_view_item_padding_double"
                        android:paddingBottom="@dimen/ap_camera_view_item_padding"
                        android:text="@string/ap_camera_text_save"
                        android:textColor="@android:color/white"
                        app:backgroundTint="@android:color/transparent"
                        app:cornerRadius="16dp"
                        app:icon="@drawable/ic_baseline_done_24"
                        app:iconPadding="5dp"
                        app:iconSize="20dp"
                        app:iconTint="@color/white"
                        app:rippleColor="#F3F3F3"
                        app:strokeColor="@color/white"
                        app:strokeWidth="1dp" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </LinearLayout>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/ap_editor_container_tools_view"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/ap_editor_photo_editor_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>